log
Fri Apr 17 07:01:43 PM UTC 2026: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
0bf2c83
Fri Apr 17 07:03:50 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
519f57d
Fri Apr 17 07:04:39 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
2a6ff14
Fri Apr 17 07:06:24 PM UTC 2026: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:10: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |     long i = 1; // Empieza una posicion a la derecha
      |          ^
cc1: all warnings being treated as errors
0ec2e13
Fri Apr 17 07:06:53 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
00d551b
Fri Apr 17 07:08:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c2c306
Fri Apr 17 07:08:32 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
cdc2d1f
